tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_visibility_errors_if_pub_function_leaks_private_type_in_return/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Type `Bar` is more private than item `bar`
  ┌─ src/main.nr:5:16
  │
5 │         pub fn bar() -> Bar {
  │                ---
  │

Aborting due to 1 previous error
